<resources>
    <string name="app_name">Proyecto_Smart_City</string>
    <string name="title_activity_aviso">Aviso</string>
    <!-- Strings used for fragments for navigation -->

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="ingresar">Ingresar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_cerrarSesion">Cerrar Sesion</string>

    <!-- <string name="menu_home">Home</string> -->
    <string name="menu_gallery">Gallery</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_avisos">Avisos</string>
    <string name="menu_mapa">Mapa</string>
    <string name="menu_mensajes">Mis mensajes</string>
    <string name="menu_cierre_sesion">Cierre Sesión</string>

</resources>
